--- a/app/assets/templates/contact.html
+++ b/app/assets/templates/contact.html
@@ -1,5 +1,7 @@
-<h1>contact</h1>
+<div class="navigation-buttons">
+	<a ui-sref="home">home</a>
+	<a ui-sref="about">about</a>
+	<a ui-sref="portfolio">portfolio</a>
+</div>
 
-<a ui-sref="home">home</a><br><br>
-<a ui-sref="about">about</a>
-<a ui-sref="portfolio">portfolio</a>
+<h1>contact</h1>
