--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -1,5 +1,7 @@
-<h1>about</h1>
+<div class="navigation-buttons">
+	<a ui-sref="home">home</a>
+	<a ui-sref="portfolio">portfolio</a>
+	<a ui-sref="contact">contact</a>
+</div>
 
-<a ui-sref="home">home</a><br><br>
-<a ui-sref="portfolio">portfolio</a>
-<a ui-sref="contact">contact</a>
+<h1>about</h1>
