--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,6 +1,10 @@
-<h1>Hello!</h1>
-<h2>My name is Brooke Fox, and I create websites.</h2>
+<div class="hello">
+	<h1>Hello!</h1>
+	<h3>My name is Brooke Fox, and I create websites.</h3>
+</div>
 
-<a ui-sref="about">about</a>
-<a ui-sref="portfolio">portfolio</a>
-<a ui-sref="contact">contact</a>
+<div class="navigation-buttons">
+	<a ui-sref="about">about</a>
+	<a ui-sref="portfolio">portfolio</a>
+	<a ui-sref="contact">contact</a>
+</div>
