--- a/app/assets/templates/portfolio.html
+++ b/app/assets/templates/portfolio.html
@@ -1,5 +1,7 @@
-<h1>portfolio</h1>
+<div class="navigation-buttons">
+	<a ui-sref="home">home</a>
+	<a ui-sref="about">about</a>
+	<a ui-sref="contact">contact</a>
+</div>
 
-<a ui-sref="home">home</a><br><br>
-<a ui-sref="about">about</a>
-<a ui-sref="contact">contact</a>
+<h1>portfolio</h1>
