--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -1,7 +1,29 @@
 <div class="navigation-buttons">
-	<a ui-sref="home">home</a>
-	<a ui-sref="portfolio">portfolio</a>
-	<a ui-sref="contact">contact</a>
+	<a class="page-links" ui-sref="home">home</a>
+	<a class="page-links" ui-sref="portfolio">portfolio</a>
+	<a class="page-links" ui-sref="contact">contact</a>
 </div>
 
-<h1>about</h1>
+<div class="page-heading">
+	<h1>About</h1>
+</div>
+
+
+<div class="about-box">
+	<div id="skills">
+		<h4>Technical skills</h4>
+	</div>
+	<div id="about-me">
+		<h4>A little about me</h4>
+		<p>My name is Brooke Fox. I am a web developer with a background in mathematics.</p>
+	</div>
+	<div id="really-like">
+		<h4>Other stuff I like</h4>
+		<ul>
+			<li>Reading about/talking about/watching TV</li>
+			<li>Long-form improv & stand-up comedy</li>
+			<li>Board games</li>
+			<li>Baseball</li>
+		</ul>
+	</div>
+</div>
