--- a/app/assets/templates/contact.html
+++ b/app/assets/templates/contact.html
@@ -1,7 +1,16 @@
 <div class="navigation-buttons">
-	<a ui-sref="home">home</a>
-	<a ui-sref="about">about</a>
-	<a ui-sref="portfolio">portfolio</a>
+	<a class="page-links" ui-sref="home">home</a>
+	<a class="page-links" ui-sref="about">about</a>
+	<a class="page-links" ui-sref="portfolio">portfolio</a>
 </div>
 
-<h1>contact</h1>
+<div class="page-heading">
+	<h1>Contact</h1>
+</div>
+
+<div class="links-box">
+	<a href="http://github.com/brookekfox"><div id="github"></div></a>
+	<a href="http://twitter.com/brookekfox"><div id="twitter"></div></a>
+	<a href="http://linkedin.com/in/foxbrooke/en"><div id="linkedin"></div></a>
+	<a href="mailto:brookekfox@gmail.com?Subject=Hello,%20Brooke!"><div id="email"></div></a>
+</div>
