--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,10 +1,10 @@
 <div class="hello">
-	<h1>Hello!</h1>
-	<h3>My name is Brooke Fox, and I create websites.</h3>
+	<h1 id="hello">Hello!</h1>
+	<h3>My name is <span id="name">Brooke Fox</span>, and I create websites.</h3>
 </div>
 
 <div class="navigation-buttons">
-	<a ui-sref="about">about</a>
-	<a ui-sref="portfolio">portfolio</a>
-	<a ui-sref="contact">contact</a>
+	<a class="page-links" ui-sref="about">about</a>
+	<a class="page-links" ui-sref="portfolio">portfolio</a>
+	<a class="page-links" ui-sref="contact">contact</a>
 </div>
