--- a/app/assets/templates/portfolio.html
+++ b/app/assets/templates/portfolio.html
@@ -1,7 +1,9 @@
 <div class="navigation-buttons">
-	<a ui-sref="home">home</a>
-	<a ui-sref="about">about</a>
-	<a ui-sref="contact">contact</a>
+	<a class="page-links" ui-sref="home">home</a>
+	<a class="page-links" ui-sref="about">about</a>
+	<a class="page-links" ui-sref="contact">contact</a>
 </div>
 
-<h1>portfolio</h1>
+<div class="page-heading">
+	<h1>Portfolio</h1>
+</div>
