finish up portfolio and about pages

--- a/app/assets/templates/portfolio.html
+++ b/app/assets/templates/portfolio.html
@@ -6,4 +6,70 @@
 
 <div class="page-heading">
 	<h1>Portfolio</h1>
+	<a href="http://github.com/brookekfox" class="page-links">github</a>
+</div>
+
+<div class="projjies-container img-list">
+	<a href="https://github.com/brookekfox/tic-tac-toe" class="projjie">
+		<img src="assets/tictac-vanilla-js.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>Tic Tac Toe</h4>
+				<p class="desc">Tic Tac Toe built with vanilla JavaScript</p>
+			</span>
+		</span>
+	</a>
+
+	<a href="https://github.com/brookekfox/tic-tac-toe-with-firebase" class="projjie">
+		<img src="assets/tictac-firebase.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>Tic Tac Toe</h4>
+				<p class="desc">Tic Tac Toe built with AngularJS with Firebase</p>
+			</span>
+		</span>
+	</a>
+
+	<a href="https://github.com/brookekfox/project-two-stash" class="projjie">
+		<img src="assets/stash.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>Stash</h4>
+				<p class="desc">A personal inventory system built in Ruby on Rails utilizing the Rotten Tomatoes API</p>
+			</span>
+		</span>
+	</a>
+
+	<a href="https://github.com/brookekfox/project-two-stash" class="projjie">
+		<img src="assets/social.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>Share</h4>
+				<p class="desc">A social media recommendation platform built in Ruby on Rails utilizing the Twitter and Instagram APIs</p>
+			</span>
+		</span>
+	</a>
+
+	<a href="https://highest-rated-episodes.herokuapp.com" class="projjie">
+		<img src="assets/imdb.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>Best Episodes</h4>
+				<p class="desc">An application which lists every episode of a television series based on the IMDb ratings built
+					in
+					Ruby on
+			Rails</p>
+			</span>
+		</span>
+	</a>
+
+	<a href="https://math-academy.herokuapp.com" class="projjie">
+		<img src="assets/math.png" width="350" height="300" style="border-radius: 10px;" />
+		<span class="text-content">
+			<span>
+				<h4>MathAcademy</h4>
+				<p class="desc">A mathematics course and standardized test prep platform built in Ruby on Rails with JavaScript and MathJax</p>
+			</span>
+		</span>
+	</a>
 </div>
