--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -10,9 +10,9 @@ $serif-font: 'Euclid', serif;
 $heading-font: 'Armonioso', sans-serif;
 
 body {
-//  background-image: url(geometry2.png);
+  background-image: url(geometry2.png);
 //  background-image: url(light_grey.png);
-  background-image: url(symphony.png);
+//  background-image: url(symphony.png);
 }
 .page-links {
   width: 400px;
@@ -66,6 +66,7 @@ h4 {
   font-family: $heading-font;
   color: #06cc84;
   font-size: 22pt;
+  margin-bottom: 50px;
 }
 .about-box {
   margin: 0 auto;
@@ -86,6 +87,17 @@ h4 {
   color: darkblue;
   margin: 0 auto;
   line-height: 150%;
+  text-decoration: none;
+}
+#about-me a {
+  text-align: center;
+  width:90%;
+  font-family: $serif-font;
+  color: darkblue;
+  margin: 0 auto;
+  line-height: 150%;
+  text-decoration: none;
+  color:#06cc84;
 }
 #really-like ul, #about-me ul, #skills ul {
   list-style-type: none;
@@ -104,7 +116,7 @@ h4 {
   width:500px;
   margin: 0 auto;
 }
-#github, #twitter, #email, #instagram, #linkedin {
+#github, #twitter, #gmail, #instagram, #linkedin {
   width:100px;
   height:100px;
   float: left;
@@ -116,9 +128,100 @@ h4 {
 #twitter {
   background-image: url(twitter.png);
 }
-#email {
+#gmail {
   background-image: url(gmail.png);
 }
 #linkedin {
   background-image: url(linkedin.png);
+}
+
+
+.projjies-container {
+  width: 80%;
+  margin: 0 auto;
+}
+.project {
+  width: 29%;
+  height: 300px;
+  border: 1px double darkblue;
+  float: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: 20px;
+}
+.img-list {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+.projjie {
+//  display: inline-block;
+  height: 300px;
+  margin: 0 1em 1em 0;
+  position: relative;
+  width: 350px;
+  float: left;
+//  border: 1px solid darkblue;
+  border-radius: 10px;
+}
+span.text-content {
+  background: rgba(0,0,0,0.3);
+  color: white;
+  cursor: pointer;
+  display: table;
+  height: 300px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 350px;
+}
+span.text-content span {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+span.text-content {
+  background: rgba(0,0,0,0.5);
+  color: white;
+  cursor: pointer;
+  display: table;
+  height: 300px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 350px;
+  opacity: 0;
+  border-radius: 10px;
+}
+.img-list .projjie:hover span.text-content {
+  opacity: 1;
+}
+span.text-content {
+  background: rgba(0,0,0,0.7);
+  color: white;
+  cursor: pointer;
+  display: table;
+  height: 300px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 350px;
+  opacity: 0;
+  -webkit-transition: opacity 500ms;
+  -moz-transition: opacity 500ms;
+  -o-transition: opacity 500ms;
+  transition: opacity 500ms;
+  border-radius: 10px;
+}
+.desc {
+  color: lightgray;
+  font-family: $serif-font;
+  margin: 0 20px 0 20px;
+}
+
+.divider {
+  margin: 0 auto;
+  margin-top: -40px;
+  width:240px;
 }
