--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -8,22 +8,31 @@
 	<h1>About</h1>
 </div>
 
-
 <div class="about-box">
 	<div id="skills">
 		<h4>Technical skills</h4>
+		<div class="divider"><img src="assets/horizontalDivider.png" /></div>
+		<p>Ruby, Java, C++</p>
+		<p>HTML5</p>
+		<p>CSS, Bootstrap, SASS</p>
+		<p>Javascript, jQuery, AngularJS</p>
+		<p>Ruby on Rails, NodeJS</p>
+		<p>Firebase, PostgreSQL</p>
+		<p>Git, Github, Heroku</p>
 	</div>
 	<div id="about-me">
 		<h4>A little about me</h4>
-		<p>My name is Brooke Fox. I am a web developer with a background in mathematics.</p>
+		<div class="divider"><img src="assets/horizontalDivider.png" /></div>
+		<p>My name is Brooke Fox. I am a web developer with a background in mathematics. I have strong problem solving
+			skills and a desire to learn new things every day. I completed a Bachelor of Science in mathematics in May 2012 and a Master of Science in mathematics in May 2014, both from Northern Arizona University in Flagstaff, Arizona.</p>
+		<p>You can view my CV <a href="https://www.dropbox.com/s/ortv2k3h619zolj/CV.pdf?dl=0" id="cv">here<a>.</p>
 	</div>
 	<div id="really-like">
 		<h4>Other stuff I like</h4>
-		<ul>
-			<li>Reading about/talking about/watching TV</li>
-			<li>Long-form improv & stand-up comedy</li>
-			<li>Board games</li>
-			<li>Baseball</li>
-		</ul>
+		<div class="divider"><img src="assets/horizontalDivider.png" /></div>
+		<p>Reading about/talking about/watching TV</p>
+		<p>Long-form improv & stand-up comedy</p>
+		<p>Baseball</p>
+		<p>Board games</p>
 	</div>
 </div>
