--- a/app/assets/templates/contact.html
+++ b/app/assets/templates/contact.html
@@ -12,5 +12,5 @@
 	<a href="http://github.com/brookekfox"><div id="github"></div></a>
 	<a href="http://twitter.com/brookekfox"><div id="twitter"></div></a>
 	<a href="http://linkedin.com/in/foxbrooke/en"><div id="linkedin"></div></a>
-	<a href="mailto:brookekfox@gmail.com?Subject=Hello,%20Brooke!"><div id="email"></div></a>
+	<a href="mailto:brookekfox@gmail.com?Subject=Hello,%20Brooke!"><div id="gmail"></div></a>
 </div>
