--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -1,4 +1,5 @@
-<div class="navigation-buttons">
+<div class="navigation-buttons"
+		 xmlns="http://www.w3.org/1999/html">
 	<a class="page-links" ui-sref="home">home</a>
 	<a class="page-links" ui-sref="portfolio">portfolio</a>
 	<a class="page-links" ui-sref="contact">contact</a>
@@ -14,7 +15,7 @@
 		<div class="divider"><img src="assets/horizontalDivider.png" /></div>
 		<p>Ruby, Java, C++</p>
 		<p>HTML5</p>
-		<p>CSS, Bootstrap, SASS</p>
+		<p>CSS3, Bootstrap, SASS</p>
 		<p>Javascript, jQuery, AngularJS</p>
 		<p>Ruby on Rails, NodeJS</p>
 		<p>Firebase, PostgreSQL</p>
@@ -25,7 +26,7 @@
 		<div class="divider"><img src="assets/horizontalDivider.png" /></div>
 		<p>My name is Brooke Fox. I am a web developer with a background in mathematics. I have strong problem solving
 			skills and a desire to learn new things every day. I completed a Bachelor of Science in mathematics in May 2012 and a Master of Science in mathematics in May 2014, both from Northern Arizona University in Flagstaff, Arizona.</p>
-		<p>You can view my CV <a href="https://www.dropbox.com/s/ortv2k3h619zolj/CV.pdf?dl=0" id="cv">here<a>.</p>
+		<p>You can view my CV <a href="https://www.dropbox.com/s/ortv2k3h619zolj/CV.pdf?dl=0" id="cv">here</a>.</p>
 	</div>
 	<div id="really-like">
 		<h4>Other stuff I like</h4>
@@ -34,5 +35,6 @@
 		<p>Long-form improv & stand-up comedy</p>
 		<p>Baseball</p>
 		<p>Board games</p>
+		<p>Podcasts</p>
 	</div>
 </div>
