--- a/app/assets/templates/portfolio.html
+++ b/app/assets/templates/portfolio.html
@@ -5,8 +5,8 @@
 </div>
 
 <div class="page-heading">
-	<h1>Portfolio</h1>
-	<a href="http://github.com/brookekfox" class="page-links">github</a>
+	<a href="http://github.com/brookekfox"><h1>Portfolio</h1></a>
+	<!--<a href="http://github.com/brookekfox" class="page-links">github</a>-->
 </div>
 
 <div class="projjies-container img-list">
@@ -25,7 +25,7 @@
 		<span class="text-content">
 			<span>
 				<h4>Tic Tac Toe</h4>
-				<p class="desc">Tic Tac Toe built with AngularJS with Firebase</p>
+				<p class="desc">Tic Tac Toe built with AngularJS and Firebase</p>
 			</span>
 		</span>
 	</a>
@@ -55,16 +55,13 @@
 		<span class="text-content">
 			<span>
 				<h4>Best Episodes</h4>
-				<p class="desc">An application which lists every episode of a television series based on the IMDb ratings built
-					in
-					Ruby on
-			Rails</p>
+				<p class="desc">An application which lists every episode of a television series based on the IMDb ratings built in Ruby on Rails</p>
 			</span>
 		</span>
 	</a>
 
 	<a href="https://math-academy.herokuapp.com" class="projjie">
-		<img src="assets/math.png" width="350" height="300" style="border-radius: 10px;" />
+		<img src="assets/math.png" width="350" height="300" style="border-radius: 10px;"/>
 		<span class="text-content">
 			<span>
 				<h4>MathAcademy</h4>
